--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -11,6 +11,13 @@
       >img {
         max-height: 45px;
       }
+      >div{
+        display:flex;
+        gap:16px;
+        button{
+          height:40px;
+        }
+      }
     }
   }
   main{
