--- a/src/components/Question/style.scss
+++ b/src/components/Question/style.scss
@@ -6,6 +6,20 @@
   & + .question{
     margin-top:8px;
   }
+
+  
+  &.highlighted{
+    background:#f4f0ff;
+    border: 1px solid #835afd;
+    footer .user-info span{
+      color:#29292e; 
+    }
+  }
+  &.answered{
+    background:#dbdcdd;
+    border:none;
+  }
+  
   p{
     color:#29292e;
   }
@@ -30,6 +44,10 @@
       }
     }
 
+    >div {
+      display:flex;
+      gap:16px;
+    }
     button{
       border:0;
       background:transparent;
