--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -14,13 +14,13 @@
       max-width:320px;
     }
     p{
-      font-size:24px;
+      font-size:1.5rem;
       line-height:32px;
       margin-top:16px;
       color:#f8f8f8;
     }
     strong{
-      font:700 36px 'Poppins', sans-serif;
+      font:700 2.25rem 'Poppins', sans-serif;
       line-height: 42px;
       margin-top:16px;
     }
