--- a/src/styles/room-code.scss
+++ b/src/styles/room-code.scss
@@ -1,26 +1,27 @@
 .room-code{
-  border-radius:8px;
+  border-radius:0.5rem;
   overflow:hidden;
   background:#fff;
   border:1px solid #835afd;
   cursor:pointer;
   display:flex;
   transition:filter 0.2s;
-
+  justify-content:center;
   &:hover{
     filter: brightness(0.9);
   }
-
   div{
+     @media (max-width:320px){
+      margin-top:-0.25rem;
+      display:hidden;
+      padding:none;
+    }
     height:40px;
     background:#835afd;
     padding: 0 12px;
     display:flex;
     justify-content:center;
     align-items:center;
-
-    
-
   }
   span{
     display:block;
