--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -9,7 +9,7 @@
       justify-content: space-between;
       align-items: center;
       >img {
-        max-height: 45px;
+        max-height: 2.8125rem;
       }
       >div{
         display:flex;
@@ -18,6 +18,7 @@
           height:40px;
         }
       }
+
     }
   }
   main{
@@ -58,7 +59,6 @@
         justify-content: space-between;
         align-items: center;
         margin-top:16px;
-        
         .user-info{
           display:flex;
           align-items: center;
@@ -94,6 +94,5 @@
       margin-top:32px;
       margin-bottom:32px;
     }
-
   }
 }
