--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -1,98 +1,115 @@
-#page-room{
-  header{
+#page-room {
+  @media (max-width: 320px) {
+    margin-left: -1rem;
+    margin-right: -1rem;
+  }
+  header {
     padding: 24px;
     border-bottom: 1px solid #e2e2e2;
-    .content{
-      max-width:1120px;
+    @media (max-width: 818px) {
+      margin-left: 2.25rem;
+      margin-right: 2.25rem;
+    }
+    .content {
+      max-width: 1120px;
       margin: 0 auto;
-      display:flex;
+      display: flex;
       justify-content: space-between;
       align-items: center;
-      >img {
+      > img {
+        @media (max-width: 818px) {
+          margin-left: -2rem;
+          margin-right: 2rem;
+        }
+        @media (max-width: 320px) {
+          transform: scale(0.9);
+          margin-left: 0.25rem;
+          margin-top: 0.2rem;
+        }
         max-height: 2.8125rem;
       }
-      >div{
-        display:flex;
-        gap:16px;
-        button{
-          height:40px;
-        }
+      > div {
+        display: flex;
+        gap: 16px;
       }
-
     }
   }
-  main{
-    max-width:800px;
+  main {
+    max-width: 800px;
     margin: 0 auto;
-    .room-title{
+    @media (max-width: 818px) {
+      margin-left: 2.25rem;
+      margin-right: 2.25rem;
+    }
+    .room-title {
       margin: 32px 0 24px;
-      display:flex;
+      display: flex;
       align-items: center;
-      h1{
-        font-family:'Poppins', sans-serif;
+      h1 {
+        font-family: "Poppins", sans-serif;
         font-size: 24px;
-        color:#29292e
+        color: #29292e;
       }
       span {
-        margin-left:16px;
-        background:#e559f9;
-        border-radius:9999px;
+        margin-left: 16px;
+        background: #e559f9;
+        border-radius: 9999px;
         padding: 8px 16px;
-        color:#fff;
-        font-weight:500;
-        font-size:14px;
+        color: #fff;
+        font-weight: 500;
+        font-size: 14px;
       }
     }
     form {
-      textarea{
-        width:100%;
-        border:0px;
-        padding:16px;
-        border-radius:8px;
-        background:#fefefe;
-        box-shadow:0 2px 12px rgba(0,0,0,0.04);
-        resize:vertical;
-        min-height:130px;
+      textarea {
+        width: 100%;
+        border: 0px;
+        padding: 16px;
+        border-radius: 8px;
+        background: #fefefe;
+        box-shadow: 0 2px 12px rgba(0, 0, 0, 0.04);
+        resize: vertical;
+        min-height: 130px;
       }
-      .form-footer{
-        display:flex;
+      .form-footer {
+        display: flex;
         justify-content: space-between;
         align-items: center;
-        margin-top:16px;
-        .user-info{
-          display:flex;
+        margin-top: 16px;
+        .user-info {
+          display: flex;
           align-items: center;
-          img{
-            width:32px;
-            height:32px;
-            border-radius:50%;
-          } 
-          span{
-            margin-left:8px;
-            color:#29292e;
-            font-weight:500;
-            font-size:14px;
+          img {
+            width: 32px;
+            height: 32px;
+            border-radius: 50%;
+          }
+          span {
+            margin-left: 8px;
+            color: #29292e;
+            font-weight: 500;
+            font-size: 14px;
           }
         }
-        > span{
-          font-size:14px;
-          color:#737380;
-          font-weight:500;
-          button{
-            background:transparent;
-            border:0;
-            color:#835afd;
-            text-decoration:underline;
-            font-size:14px;
-            font-weight:500;
-            cursor:pointer;
+        > span {
+          font-size: 14px;
+          color: #737380;
+          font-weight: 500;
+          button {
+            background: transparent;
+            border: 0;
+            color: #835afd;
+            text-decoration: underline;
+            font-size: 14px;
+            font-weight: 500;
+            cursor: pointer;
           }
         }
       }
     }
-    .question-list{
-      margin-top:32px;
-      margin-bottom:32px;
+    .question-list {
+      margin-top: 32px;
+      margin-bottom: 32px;
     }
   }
 }
