--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -2,11 +2,28 @@
   display: flex;
   align-items: stretch;
   height: 100vh;
-  @media (max-width: 1024px) {
-    flex-direction: row;
+  scroll-snap-type: x mandatory;
+  @media (max-width: 2560px) {
+    height: 100vh;
   }
-  @media (max-width: 730px) {
+  @media (max-width: 1440px) {
+    height: 100vh;
+  }
+  @media (max-width: 1024px) {
+    height: 100vh;
     flex-direction: column;
+  }
+  @media (max-width: 768px) {
+    height: 100vh;
+  }
+  @media (max-width: 425px) {
+    height: 100vh;
+  }
+  @media (max-width: 375px) {
+    height: 100vh;
+  }
+  @media (max-width: 320px) {
+    height: 100vh;
   }
   aside {
     flex: 7;
@@ -16,37 +33,145 @@
     flex-direction: column;
     justify-content: center;
     padding: 120px 80px;
-    @media (max-width: 730px) {
-      max-height: 80%;
-      margin-bottom: 2.5rem;
+    @media (max-width: 2560px) {
+    }
+    @media (max-width: 1440px) {
+    }
+    @media (max-width: 1024px) {
+      padding: 1rem 6.25rem;
+    }
+    @media (max-width: 768px) {
+      padding: 2rem 0rem;
+      height: 100vh;
+    }
+    @media (max-width: 425px) {
+      padding: 1.8rem 0.5rem;
+      height: 100vh;
+    }
+    @media (max-width: 375px) {
+      padding: 1.8rem 0.5rem;
+      height: 80vh;
+    }
+    @media (max-width: 320px) {
+      padding: 3rem 0.5rem;
+      height: 80vh;
+      margin-bottom: 2rem;
     }
     img {
       max-width: 320px;
-    }
-    p {
-      font-size: 1.5rem;
-      line-height: 32px;
-      margin-top: 16px;
-      color: #f8f8f8;
-      @media (max-width: 720px) {
-        // margin-top: 4rem;
+      @media (max-width: 2560px) {
+      }
+      @media (max-width: 1440px) {
+      }
+      @media (max-width: 1024px) {
+        margin-top: -2rem;
+        margin-bottom: -2rem;
+        transform: scale(0.7);
+      }
+      @media (max-width: 768px) {
+        margin: -5rem auto;
+        transform: scale(0.66);
+      }
+      @media (max-width: 425px) {
+        transform: scale(0.6);
+        margin: 0 auto;
+      }
+      @media (max-width: 375px) {
+        transform: scale(0.3);
+        margin-bottom: -5rem;
+        margin-top: 2rem;
+      }
+      @media (max-width: 320px) {
+        margin-top: -5rem;
+        transform: scale(0.6);
       }
     }
     strong {
       font: 700 2.25rem "Poppins", sans-serif;
       line-height: 42px;
       margin-top: 16px;
-      @media (max-width: 720px) {
-        margin-top: 2.5rem;
+      @media (max-width: 2560px) {
+      }
+      @media (max-width: 1440px) {
+      }
+      @media (max-width: 1024px) {
+        transform: scale(1);
+      }
+      @media (max-width: 768px) {
+        transform: scale(0.9);
+        text-align: center;
+      }
+      @media (max-width: 425px) {
+        margin-top: -2.5rem;
+        transform: scale(0.82);
+      }
+      @media (max-width: 375px) {
+        transform: scale(0.8);
+      }
+      @media (max-width: 320px) {
+        margin-top: -1.5rem;
+        transform: scale(0.7);
+      }
+    }
+    p {
+      font-size: 1.5rem;
+      line-height: 32px;
+      margin-top: 16px;
+      color: #f8f8f8;
+      @media (max-width: 2560px) {
+      }
+      @media (max-width: 1440px) {
+      }
+      @media (max-width: 1024px) {
+        transform: scale(1);
+      }
+      @media (max-width: 768px) {
+        text-align: center;
+        transform: scale(0.9);
+      }
+      @media (max-width: 425px) {
+        transform: scale(0.82);
+        height: 100vh;
+      }
+      @media (max-width: 375px) {
+        display: box;
+        transform: scale(0.8);
+        margin-bottom: 10rem;
+      }
+      @media (max-width: 320px) {
+        margin-top: 0rem;
+        transform: scale(0.7);
+        margin-bottom: 2rem;
       }
     }
   }
   main {
-    @media (max-width: 730px) {
-      padding-bottom: 5rem;
+    margin-bottom: 5rem;
+    @media (max-width: 2560px) {
+    }
+    @media (max-width: 1440px) {
+    }
+    @media (max-width: 1024px) {
+      margin-top: 5rem;
+      // margin-bottom: 5rem;
+      transform: scale(1);
+    }
+    @media (max-width: 768px) {
+      transform: scale(0.76);
+    }
+    @media (max-width: 425px) {
+      transform: scale(0.42);
+    }
+    @media (max-width: 375px) {
+      transform: scale(0.8);
+      justify-content: center;
+      align-items: center;
     }
     @media (max-width: 320px) {
+      margin-top: -2rem;
+      height: 80vh;
       justify-content: center;
+      align-items: center;
     }
     flex: 8;
     padding: 0 32px;
@@ -63,6 +188,8 @@
     text-align: center;
     > img {
       align-self: center;
+      @media (max-width: 375px) {
+      }
     }
     h2 {
       font-size: 24px;
@@ -82,6 +209,7 @@
       }
       button,
       input {
+        margin-bottom: 2.5rem;
         width: 100%;
       }
     }
